--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,17 @@ body {
     color: #b58863
 }
 
+.piece {
+    width: 100%;
+    z-index: 1;
+    cursor: pointer;
+}
+.piece img {
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+}
+
 @media (min-width: 600px) {
     .chessBoard {
         width: 600px;
