--- a/version 2.0/styles/styles.css
+++ b/version 2.0/styles/styles.css
@@ -9,6 +9,11 @@ body {
     padding-left: 30px;
 }
 
+#info-display {
+    color: whitesmoke;
+    padding-left: 30px;   
+}
+
 #gameboard {
     width: 320px;
     height: 320px;
